--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,9 +3,21 @@
 position: fixed;
 left: 20px;
 width: 80px;
+top:10px;
 }
 .avatar{
     position: fixed;
     right: 20px;
     width: 30px;
+    top:5px;
+}
+.navbar{
+    position: fixed;
+    top:0;
+    background-color: rgb(29, 35, 37);
+    width: 100%;
+    height: 40px;
+    display:flex;
+    justify-content: space-between;
+    
 }
