--- a/src/components/RowPost/RowPost.css
+++ b/src/components/RowPost/RowPost.css
@@ -15,7 +15,30 @@ color: aliceblue;
     max-height: 250px ;
     margin-right: 10px; 
     border-radius: 5px;
+    cursor: pointer;
+    transition: all .2s ease-in-out; 
  }
- .poster::-webkit-scrollbar{
-    display: none;
+ .posters::-webkit-scrollbar {
+   display: none;
+ }
+ .smallPoster{
+   max-height:150px;
+   max-width: 100%;
+   cursor: pointer;
+    margin-right: 10px; 
+    transition: all .2s ease-in-out; 
+   
+ }
+ .mediumPoster{
+   max-height:200px;
+   max-width: 100%;
+   cursor: pointer;
+    margin-right: 10px; 
+   
+ }
+ .poster:hover{
+  transform: scale(1.1);
+ }
+.smallPoster:hover{
+  transform:scaleY(1.1)
  }
