--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,9 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #111;
+    scrollbar-width: none;
 }
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
